<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VoiceBuy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start">Swipe to Get Started</string>
    <string name="description">Description About The App</string>
    <string name="title_activity_screen_slide_pager">ScreenSlidePagerActivity</string>
    <string name="title_activity_screen_slide_page_fragment">ScreenSlidePageFragment</string>
    <string name="search_main">What are you looking for?</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="btSpeak">Speak</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_voice_recognition">Search Products</string>
    <string name="tvTextMatches">Text Matches</string>
    <string name="sNoOfMatches">No of Matches</string>
    <string name="etSearchHint">Speech hint here</string>
    <string name="action_update">Update</string>
    <string name="action_cart">Cart</string>
	<string name="filter">Filter</string>
    <string-array name="saNoOfMatches">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
     <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item >Other</item>
        
    </string-array>
    <string-array name="countries_array">
        <item>Afghanistan</item>um
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
        <item >India</item>
        <item>Belgium</item>
        <item>Denmark</item>
        
    </string-array>
     
    

    <string name="signup">Create a new Account!</string>
    <string name="login">Log In</string>
    <string name="introstr">VoiceBuy lets you purchase clothing accessories across a wide variery of brands online. </string>
    <string name="swipe">Swipe to pick a store and start shopping!</string>
    <string name="searchres">Search Results will appear here...</string>
    <string name="title_activity_shopping_cart">ShoppingCart</string>
    <string name="title_activity_home_screen">VoiceBuy</string>
    <string name="title_activity_stores_list">Stores List</string>
    <string name="twitter_auth">login with twitter</string>

</resources>
