 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
  <ViewFlipper
            android:id="@+id/view_flipper"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
            
        <!--  The child Views/Layout to flip -->
        
        <!--  Layout  1st Screen -->
       <RelativeLayout
    android:id="@+id/Layout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.9"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gui.MainActivity" >

    <Button
        android:id="@+id/roboto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="9dp"
        android:alpha="1"
        android:background="@drawable/shapes"
        android:drawableRight="@drawable/ic_action"
        android:focusable="false"
        android:gravity="left|center_vertical"
        android:padding="20dp"
        android:text="@string/start"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="visible" />
    </RelativeLayout>
    
	<RelativeLayout
    android:id="@+id/Layout1a"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:orientation="vertical"

    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gui.MainActivity" >

	    <LinearLayout
	        android:id="@+id/btnbar"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_margin="0dp"
	        android:background="@color/mdblue"
	        android:gravity="bottom|center"
	        android:orientation="horizontal"
	        android:padding="2dp" >

    <Button
        android:id="@+id/login"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:background="@drawable/shapes"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:padding="15dp"
        
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/login"
        android:textStyle="bold"
       	style="?android:attr/buttonBarButtonStyle"
        android:visibility="visible" />

    <Button
        android:id="@+id/signup"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:background="@drawable/shapes"
        android:gravity="center"
        android:padding="15dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginLeft="15dp"
        android:text="@string/signup"
        style="?android:attr/buttonBarButtonStyle"
        android:textStyle="bold"
        android:visibility="visible" />
    
    </LinearLayout>
    </RelativeLayout>
            
        
                <!--  Layout  for 2nd Screen -->
          	<LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical" 
                    android:id="@+id/Layout2">
    				<ListView 
    				    android:layout_height="wrap_content"
    				    android:layout_width="wrap_content"
    				    android:id="@+id/listview" >
    				</ListView>
    
            </LinearLayout>

        </ViewFlipper>
    
    
</LinearLayout>
